[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sulfur-auth"
version = "0.0.2"
authors = [
  { name="proplayer919", email="me@proplayer919.dev" },
]
maintainers = [
  { name="proplayer919", email="me@proplayer919.dev" },
]
description = "A robust, secure authentication library for Python."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sulfur-auth/sulfur"
Issues = "https://github.com/sulfur-auth/sulfur/issues"
